--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -11,7 +11,7 @@ body.dashboard {
 }
 
 .container.dashboard {
-  $padding: 15px;
+  $padding: 30px;
   padding: $padding;
   padding-left: $sidebar-width + $padding;
 
